--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "categories": [
         "Extension Packs"
     ],
-    "extensionPack": [ 
-        "publisher.extensionName"
+    "extensionPack": [
+        "pokey.command-server"
     ]
 }
